# HC

./: .gitignore  CMakeLists.txt  CODE_REVIEW_REPORT.md  LICENSE  README.md
.github/workflows/: ci.yml  codeql.yml
sgn/bindings/python/: example_pysgn.py  pysgn.cpp  setup.py
sgn/docs/: HPDC_FILES_GUIDE.md  RESTRUCTURING.md
sgn/docs/必看问题修改/: 问题.md  问题2.md
sgn/docs/核心索引/: sgn_spec.7z  旧版。.7z
sgn/docs/核心索引/sgn_spec/: ABI计划书.md  README.md  SGN 三界速查手册.md  SGN 三界速查手册.md.bak  讲解问题.md
sgn/docs/核心索引/sgn_spec/L0_core/: sgn_config_guide.md  sgn_config_guide.md.bak  sgn_engine_core.md  sgn_engine_core.md.bak  sgn_hc_ops.md  sgn_hc_ops.md.bak  sgn_index_matrix.md  sgn_index_matrix.md.bak  sgn_math_core.md  sgn_math_core.md.bak  sgn_network_core.md  sgn_reliability_core.md  sgn_storage_core.md  sgn_trie_core.md  sgn_trie_core.md.bak
sgn/docs/核心索引/sgn_spec/L1_extensions/: HC_2adic平方根_Hensel提升规范_v1.2.md  HC_DFA状态编码规范_v1.1.md  HC_Hensel提升求根规范_v1.1.md  HC_形态学膨胀与腐蚀规范_v1.1.md  HC_投影除法与欧氏运算沙盒规范_v1.2.md  HC_整数次幂快速幂规范_v1.1.md  HC_球面坐标与距离场规范_v1.1.md  (+7 more)
sgn/examples/: hpdc_cpp_example.cpp
sgn/include/hc/: dc.h  hc.h  hc16.h  hc32.h  hc64.h  hc8.h  hc_simd.h  hpdc_core.h  hpdc_cpp.hpp  hpdc_engine.h  hpdc_network.h  hpdc_normative.h  hpdc_plugin.h  hpdc_sandbox.h  hpdc_storage.h  hpdc_trie.h  sgn.h  sgn_abi_dynamic.h  sgn_macros.h
sgn/src/: dc.c  hc.c  hc16.c  hc32.c  hc64.c  hc8.c  hc_simd.c  hpdc_core.cpp  hpdc_engine.cpp  hpdc_network.cpp  hpdc_plugin.cpp  hpdc_sandbox.cpp  hpdc_storage.cpp  hpdc_trie.cpp  sgn_abi_dynamic.cpp
tests/: sgn_test.h  test_hpdc.cpp  test_sgn.c
(+34 files in other folders)
